--- a/index.html
+++ b/index.html
@@ -94,15 +94,17 @@
             </div> 
         </div>
         <div class="exprience-working-content">
-          <div class="exprience-working-content1">
-            <h1>06</h1>
-            <h3>Years Experience Working</h3>
-          </div>
-          <div class="exprience-working-content2">
-            <h4 id="exprience-working-h4">CONTRACT ME NOW</h4>
-            <h4>(+880)1631-381528</h4>
-            <h4>pj.parvaz45@gmail.com</h4>
-          </div>
+            <div class="exprience-working-contents">
+                <div class="exprience-working-content1">
+                    <h1>06</h1>
+                    <h3>Years Experience Working</h3>
+                  </div>
+                  <div class="exprience-working-content2">
+                    <h4 id="exprience-working-h4">CONTRACT ME NOW</h4>
+                    <h4>(+880)1631-381528</h4>
+                    <h4>pj.parvaz45@gmail.com</h4>
+                  </div>
+            </div>
         </div>
     </div>
         <!-- Exprience working Section Ending -->
@@ -115,25 +117,33 @@
                 <p>is in beast beginning signs open god you're gathering ithe</p>
             </div>
             <div class="service-contentiner">
-                <div class="service-content">
-                    <img width="80px" src="images/wp-design.png" alt="">
-                    <h3>WP DEVELOPING</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum possimus perferendis officia velit. Aliquam, nam molestias veritatis error doloremque maxime.</p>
+                <div class="service-content-continer">
+                    <div class="service-content">
+                        <img width="80px" src="images/wp-design.png" alt="">
+                        <h3>WP DEVELOPING</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum possimus perferendis officia velit. Aliquam, nam molestias veritatis error doloremque maxime.</p>
+                    </div>
                 </div>
-                <div class="service-content">
-                    <img width="80px" src="images/ui.png" alt="">
-                    <h3>UI/UX DESIGN</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum possimus perferendis officia velit. Aliquam, nam molestias veritatis error doloremque maxime.</p>
+                <div class="service-content-continer">
+                    <div class="service-content">
+                        <img width="80px" src="images/ui.png" alt="">
+                        <h3>UI/UX DESIGN</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum possimus perferendis officia velit. Aliquam, nam molestias veritatis error doloremque maxime.</p>
+                    </div>
                 </div>
-                <div class="service-content">
-                    <img width="80px" src="images/web-design.png" alt="">
-                    <h3>WEB DESIGN</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum possimus perferendis officia velit. Aliquam, nam molestias veritatis error doloremque maxime.</p>
+                <div class="service-content-continer">
+                    <div class="service-content">
+                        <img width="80px" src="images/web-design.png" alt="">
+                        <h3>WEB DESIGN</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum possimus perferendis officia velit. Aliquam, nam molestias veritatis error doloremque maxime.</p>
+                    </div>
                 </div>
-                <div class="service-content">
-                    <img width="80px" src="images/seo.png" alt="">
-                    <h3>SEO OPTIMIZE</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum possimus perferendis officia velit. Aliquam, nam molestias veritatis error doloremque maxime.</p>
+                <div class="service-content-continer">
+                    <div class="service-content">
+                        <img width="80px" src="images/seo.png" alt="">
+                        <h3>SEO OPTIMIZE</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum possimus perferendis officia velit. Aliquam, nam molestias veritatis error doloremque maxime.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -146,11 +156,13 @@
                 <img src="./images/pic-two.jpeg" alt="">
                 <a href="files/photo-one/photo-one.html" class="button">See More</a>
             </div>
-            <div class="img img2">
-                <img src="" alt="">
+            <div class="img">
+                <img src="./images/bike.jpeg" alt="">
+                <a href="files/photo-one/photo-one.html" class="button">See More</a>
             </div>
-            <div class="img img3">
-                <img src="" alt="">
+            <div class="img">
+                <img src="./images/pic-one.jpeg" alt="">
+                <a href="files/photo-one/photo-one.html" class="button">See More</a>
             </div>
         </div>
 
